[package]
name = "rusub"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
pcap = "0.11"
trust-dns-proto = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
pnet_packet = "0.28"
fnv = "1.0"
rand = "0.8"
rand_chacha = "0.3"
get_if_addrs = "0.5"
tempfile = "3.10"
flate2 = "1.0"

[dependencies.parquet]
version = "52"
optional = true


[features]
default = []
parquet-out = ["parquet"]


