[package]
name = "rusub"
version = "1.0.0"
edition = "2021"
authors = ["AdySec <admin@adysec.com>"]
description = "高速、智能的子域枚举工具"
license = "MIT"
repository = "https://github.com/adysec/rusub"
homepage = "https://github.com/adysec/rusub"
keywords = ["dns", "subdomain", "enumeration", "security", "recon"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
pcap = "0.11"
trust-dns-proto = "0.22"
trust-dns-resolver = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
pnet_packet = "0.28"
fnv = "1.0"
rand = "0.8"
rand_chacha = "0.3"
get_if_addrs = "0.5"
tempfile = "3.10"
flate2 = "1.0"

[dependencies.parquet]
version = "52"
optional = true


[features]
default = []
parquet-out = ["parquet"]


